--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <body>
 <div class="container">
 		<div class="btn-group btn-group-justified" role="group">
-			<button type='button' class="btn btn-primary btn-danger">OH</button>
-			<button type='button' class="btn btn-primary btn-danger">MY</button>
-			<button type='button' class="btn btn-primary btn-danger">GLOB</button>
-			<button type='button' class="btn btn-primary btn-danger">!!!</button>
+			<button type='button' class="btn btn-danger">OH</button>
+			<button type='button' class="btn btn-danger">MY</button>
+			<button type='button' class="btn btn-danger">GLOB</button>
+			<button type='button' class="btn btn-danger">!!!</button>
 		</div>
 <!-- http://getbootstrap.com/components/#with-button-elements
 	<div class="btn-group btn-group-justified" role="group">
  			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Alpha</button>
+				<button type='button' class="btn  btn-warning">Alpha</button>
 			</div>
 			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Beta</button>
+				<button type='button' class="btn btn-warning">Beta</button>
 			</div>
 			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Gamma</button>
+				<button type='button' class="btn btn-warning">Gamma</button>
 			</div>
 			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Delta</button>
+				<button type='button' class="btn btn-warning">Delta</button>
 			</div>
 			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Epsilon</button>
+				<button type='button' class="btn btn-warning">Epsilon</button>
 			</div>
 			<div class="btn-group">
-				<button type='button' class="btn btn-primary btn-warning">Zeta</button>
+				<button type='button' class="btn btn-warning">Zeta</button>
 			</div>
 		</div>
 
 		<div class="btn-group btn-group-justified" role="group">
-			<a href="#" class="btn btn-primary btn-success">Apple</a>
-  			<a href="#" class="btn btn-primary btn-success">Samsung</a>
-  			<a href="#" class="btn btn-primary btn-success">Sony</a>
+			<a href="#" class="btn btn-success">Apple</a>
+  			<a href="#" class="btn btn-success">Samsung</a>
+  			<a href="#" class="btn btn-success">Sony</a>
 		</div>
 	-->
 </div>
